[project]
name = "helix-hands-on"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "markitdown[all]>=0.1.3",
    "openai>=1.109.1",
    "pygithub>=2.8.1",
    "requests>=2.32.5",
    "trafilatura>=2.0.0",
    "youtube-transcript-api>=1.0.3",
]
